fix dark mode for tags

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -26,12 +26,12 @@
 
   :root {
     --bg-color: #000;
-    --gray-dark: lighten(black, 75%);
-    --gray-light: lighten(black, 50%);
+    --gray-dark: lighten(black, 85%);
+    --gray-light: lighten(black, 60%);
 
     --faded-bg-color: rgba(40, 40, 40, 0.9);
-    --slight-bg-color: lighten(#000, 5%);
-    --slighter-bg-color: lighten(#000, 15%);
+    --slight-bg-color: lighten(#000, 10%);
+    --slighter-bg-color: lighten(#000, 20%);
   }
 
   hr {
@@ -39,17 +39,8 @@
   }
 
   code {
-    background-color: #330000;
-  }
-
-  .navbar-nav {
-    li {
-      a {
-        &:hover {
-          color: var(--gray-dark) !important;
-        }
-      }
-    }
+    background-color: var(--slight-bg-color);
+    color: #d8365f;
   }
 
   blockquote {
@@ -461,6 +452,9 @@ samp {
         // only highlight in mobile
         &:active {
           background: rgba(0, 0, 0, 0.12);
+        }
+        &:hover {
+          color: @brand-primary;
         }
       }
     }
