--- a/less/tag-cloud.less
+++ b/less/tag-cloud.less
@@ -38,7 +38,7 @@
     &:active {
       color: white;
       border-color: white;
-      background-color: rgba(255, 255, 255, 0.4);
+      background-color: var(--slight-bg-color) !important;
       text-decoration: none;
     }
     @media only screen and (min-width: 768px) {
@@ -66,7 +66,7 @@
     line-height: 28px;
     margin: 0 2px;
     margin-bottom: 8px;
-    background: #f3f5f5;
+    background-color: var(--gray-dark);
     &:hover,
     &:active,
     &.focus {
